# ciak

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
ciak/: __init__.py  ciak.py  ciak36.py  generate_ciak36.sh  parser.py
tests/: example_file.txt  test_ciak.py  test_parser.py
