[tool.poetry]
name = "ciak"
version = "0.1.0"
description = "Run executables according to a configuration file"
authors = ["Gabriele Bozzola <sbozzolator@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/sbozzolo/ciak"
repository = "https://github.com/sbozzolo/ciak"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sbozzolo/motionpicture/issues"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
